// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuizApp client testing Shows answer status 1`] = `
"<div>
  <h1>Welcome to the QUIZ!!!</h1>
  <p>Loading...</p><a href=\\"/quiz\\">Take a quiz</a>
</div>"
`;

exports[`QuizApp client testing should render frontpage 1`] = `
"<div>
  <h1>Welcome to the QUIZ!!!</h1>
  <p>Loading...</p><a href=\\"/quiz\\">Take a quiz</a>
</div>"
`;

exports[`QuizApp client testing should show a random question on QuizPage 1`] = `"<h1>Loading....</h1>"`;

exports[`QuizApp client testing snapshot on route /answers/wrong when question is correct 1`] = `
"<div>
  <h1>CORRECT ANSWER</h1><button><a href=\\"/quiz\\">New question</a></button><button><a href=\\"/\\">Home</a></button>
</div>} /&gt;"
`;

exports[`QuizApp client testing snapshot on route /answers/wrong when question is wrong 1`] = `
"<div>
  <h1>WRONG ANSWER</h1><button><a href=\\"/quiz\\">New question</a></button><button><a href=\\"/\\">Home</a></button>
</div>} /&gt;"
`;
